Adding swag docs for create and delete
